<?xml version="1.0"?>
<package format="3">
  <name>week4_arm</name>
  <version>0.0.0</version>
  <description>Python-based ROS 2 package for Week 4A</description>
  <maintainer email="ankit@example.com">Ankit Pandey</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>